Test_as_a_user/dep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver-entrypoint
  labels:
      app: my-service
  namespace: default
spec:
  # type: NodePort
  selector:
    app: main
  ports:
  - port: 8081
    targetPort: 8081
    # nodePort: 30001
